# lazy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: lazy.py
tests/: test_lazyobj.py
