[tool.poetry]
name = "lazyobj"
version = "0.1.0"
description = "Lazy Objects"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-pythonpath = "^0.7.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_paths = [
    "src"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
