[tool.poetry]
name = "lazyobj"
version = "0.1.0"
description = "Lazy Objects"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
